[package]
name = "boteg"
version = "0.1.0"
authors = ["murano <murano1980@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
failure = "0.1"
bytes = "0.5"
