[package]
name = "boteg"
version = "0.1.0"
authors = ["murano <murano1980@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
axum-server = {version = "0.7",features = ["tls-rustls"], optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
failure = "0.1"
bytes = "1.7"
futures-util = "0.3" ##

[features]
tls = ["dep:axum-server"]

[[example]]
name = "ping"
path = "examples/ping.rs"
required-features = ["tls"]